--- a/tmp.html
+++ b/tmp.html
@@ -1,62 +1,12 @@
-
-
-@media only screen and (max-width : 320px) {
-
-    /* Styles */
-    html {
-        font-size: 17px !important;
-    }
-}
-
-@media only screen and (min-width : 320px) and (max-width : 480px) {
-
-    /* Styles */
-    html {
-        font-size: 19px !important;
-    }
-}
-
-
-@media only screen and (min-width : 480px) and (max-width : 768px) {
-    .navbar_header {
-            background-color: #fff256!important;
-        }
-    /* Styles */
-    html {
-        font-size: 19px !important;
-    }
-}
-
-@media only screen and (min-width : 768px) and (max-width : 1024px) {
-    .navbar_header {
-            background-color: #fff256 !important;
-        }
-    /* Styles */
-    html {
-        font-size: 20px !important;
-    }
-}
-
-@media only screen and (min-width : 1024px) and (max-width : 1224px) {
-
-    /* Styles */
-    html {
-        font-size: 25px !important;
-    }
-}
-
-@media only screen and (min-width : 1224px) and (max-width : 1824px) {
-
-    /* Styles */
-    html {
-        font-size: 25px !important;
-    }
-}
-
-@media only screen and (min-width : 1824px) {
-
-    /* Styles */
-    html {
-        font-size: 30px !important;
-    }
-}
+							<button type="button" class="form_search_button_hover show_form_search">
+								<img src="img/icon/icons8-search.svg" style="height: 1rem" alt="icon-search" />
+							</button>
+							<div class="form_search ml-2 rounded">
+								<input type="text" class="form_search_term" placeholder="Bạn muốn tìm kiếm gì?" />
+								<button type="submit" class="form_search_button">
+									<img src="img/icon/icons8-search.svg" style="height: 1rem" alt="icon-search" />
+								</button>
+								<button type="button" id="close_form_search" class="form_search_button_hover">
+									<img src="img/icon/icon_close.svg" style="height: 1.25rem" alt="icon-search" />
+								</button>
+							</div>
